# Casadi_Eigen_CodeGen

./: .gitignore  CMakeLists.txt  README.md
codegenEigen/include/: myfunction.h
codegenEigen/src/: myfunction.cpp
include/casadi_eigen_codegen/: CasadiEigenCodeGenerator.hpp
src/: GenerateEigenFunction.cpp  TestUseEigenFunction.cpp
